--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 
-
 #social-buttons button {
 
 color: white;
@@ -41,7 +40,52 @@ background-attachment: fixed;
 
 }
 
-<<<<<<< Updated upstream
+#sidebar {
+    width:300px;
+    float:left;
+}
+
+#content {
+    width:724px;
+    float:right;
+    padding-left:24px;
+}
+
+/* navigation */
+nav {
+    width:100%;
+    background-color:rgb(240,240,240);
+    border:solid 1px rgb(220,220,220);
+    padding:0 12px;
+}
+
+nav.stick {
+    position: fixed;
+    top: 0;
+    z-index: 10000;
+    margin-top:12px;
+}
+
+nav ul {
+    list-style-type:none;
+    margin:0;
+    padding:0;
+}
+
+nav li {
+
+}
+
+nav li a {
+    color:rgb(50,50,50);
+    font-weight:700;
+      float: left
+}
+
+a.nav-active {
+    color:#ccc;
+}
+
 .carousel-inner>.item>img, .carousel-inner>.item>a>img {
 display: block;
 height: auto;
@@ -51,9 +95,8 @@ line-height: 1;
 width: 100%; 
 padding: 20px;
 text-align: center;
-=======
 .carousel-item {
 	width:900px;
 	height:500px;
->>>>>>> Stashed changes
+
 }
